# RomanNumerals

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README.md  RomanNum.f90  RomanNum.f90.bak  asciiOutUnix.txt  asciirun.bat  configure.ac  makefile  modules.f90  modules.f90.bak  normOutUnix.txt  parameters.f90  parameters.mod  qrun.sh  rons.txt  rons2.txt  routines.f90  run.bat  runascii.bat  taskrev-ford.md.in
common/: Makefile.am  parameters.f90  routines.f90
doc/: Makefile.am
m4/: aqm_prog_ford.m4
src/: Makefile.am  Makefile.in  RomanNum.f90  makefile  parameters.f90  routines.f90
test/: Makefile.am  Makefile.in  makefile  routines.f90  t.sh  test  test.f90  test2.f90  test3.f90  test4  test4.f90
tests/: ascii.f90  asciiPlain.txt  qrun.bat  qrun.sh  run.bat
