#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([TaskRevisited], [0.9.2], [m.alexandrakis@qmul.ac.uk])
AC_CONFIG_SRCDIR([src/RomanNum.f90])
AC_LANG_PUSH([Fortran])

# Checks for programs.
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 test/Makefile])
AC_OUTPUT
