bin_PROGRAMS = RomanNum
RomanNum_SOURCES = parameters.f90 routines.f90 RomanNum.f90
RomanNum_FCFLAGS = -I$(top_srcdir)/common
RomanNum_LDADD = $(top_srcdir)/common/lib*.a

# EXTRA_RomanNum_SOURCES = test.f90 test2.f90 test3.f90 test4.f90

# Per-file flags
# AM_FCFLAGS = ... some flags ...

# Per-product flags
# <product>_FCFLAGS = ...more flags ... $(AM_FCFLAGS)

# CFLAGS, FCFLAGS, etc, should be reserved for the end user