bin_PROGRAMS = RomanNum
RomanNum_SOURCES = RomanNum.f90
AM_FCFLAGS = -I$(top_builddir)/common
RomanNum_LDADD = ../common/libcommon.a

# Per-file flags
# AM_FCFLAGS = ... some flags ...

# Per-product flags
# <product>_FCFLAGS = ...more flags ... $(AM_FCFLAGS)

# CFLAGS, FCFLAGS, etc, should be reserved for the end user